--- a/04-qualtrics.Rmd
+++ b/04-qualtrics.Rmd
@@ -5,7 +5,7 @@ library(tidyverse)
 ```
 ## Overview
 
-There are two tasks covered in this section: 1) importing surveys into Qualtrics and 2) moving data from Qualtrics to R. An overview of each process is below.
+There are two tasks covered in this section: **1)** importing surveys into Qualtrics and **2)** moving data from Qualtrics to R. An overview of each process is below.
 
 **1. Importing items into Qualtrics**
 
@@ -68,7 +68,7 @@ Here we focus only on the second approach to entering items into Qualtrics.
 
 ### Create survey codebook
 
-We want to create a survey that contains 2 demographics items, 18 commitment items, and 4 job satisfaction items. We have entered the items into the [survey_codebook.csv](survey_codebook.csv) file (illustrated below). We treat the 2 demogrpahic questions as block, the 18 commitment items as a block, and the 4 job satisfaction items as a block. Below I describe what information should be place into each of the columns in the survey codebook (block, item_name, item_text, type, response_options).
+We want to create a survey that contains 2 demographics items, 18 commitment items, and 4 job satisfaction items. To do we create a survey codebook spreadsheet in Excel (or similar program). The spreadsheet should have the columns block, item_name, item_text, type, response_options. The completed file is illustrated below  [survey_codebook.csv](survey_codebook.csv) file. Although you can see the information that should be in each column based of the figure I provide a detailed information of what should be placed in each column. Remember to work from the guiding principle that one row is use for one item/question.
 
 ```{r, echo=FALSE, out.width="100%"}
 knitr::include_graphics("ch_qualtrics/images/screenshot_items.png")
@@ -127,7 +127,7 @@ The item_text column contains the text for each item. Note that if you use comma
 
 | Code for type column | Qualtrics Item Type | Additional Information  |
 |----------------------|---------------------|-------------------------|
-| matrix               | matrix     | If the first item in a block has type *matrix* all items in the block will be used to constucts the matrix question. **Unfortunately, importing item_names for matrix questions is not supported by qualtrics. You will need to manually restore your item_names following the directions below for matrix items.** |
+| matrix               | matrix     | If the first item in a block has type *matrix* all items in the block will be used to constucts the matrix question. **Unfortunately, importing item_names for matrix questions is not supported by Qualtrics. You will need to manually restore your item_names following the directions below for matrix items.** |
 | MC                   | multiple choice vertical format  |  |
 | MC_horizonal         | multiple choice horizontal format  |  |
 | MC_multi_horizonal   | multiple choice horizontal format multiple answers |  |
@@ -204,9 +204,22 @@ Strongly Disagree; Disagree; Neutral; Agree; Strongly Agree
 Once you have the survey codebook above, you need to convert it to an [Advanced Text Format](https://www.qualtrics.com/support/survey-platform/survey-module/survey-tools/import-and-export-surveys/) .txt file. We can do so by following the steps below.
 
 ##### RStudio on your computer
-1. Create a folder on your computer with the survey_codebook.csv file in it. if you are using RStudio Clo
+1. Create a folder on your computer called "new_survey" with the survey_codebook.csv file in it.
 
-2. Op
+2. Open RStudio. Then go to File > New Project...
+
+3.  
+
+```{r, eval = FALSE}
+library(tidyverse)
+library(qualtricsMaker)
+
+survey_codebook <- read_csv("survey_codebook.csv",
+                            show_col_types = FALSE)
+
+make_survey(survey_codebook,
+            filename = "items_qualtrics_format.txt")
+```
 
 
 ##### RStudio Cloud
@@ -231,6 +244,20 @@ remotes::install_github("dstanley4/qualtricsMaker")
 
 ```{r, echo = FALSE, out.width = "50%"}
 knitr::include_graphics("ch_qualtrics/images/screenshot_import_button.png")
+```
+
+
+
+
+```{r, eval = FALSE}
+library(tidyverse)
+library(qualtricsMaker)
+
+survey_codebook <- read_csv("survey_codebook.csv",
+                            show_col_types = FALSE)
+
+make_survey(survey_codebook,
+            filename = "items_qualtrics_format.txt")
 ```
 
 
