--- a/03-workflox.Rmd
+++ b/03-workflox.Rmd
@@ -199,7 +199,7 @@ A Likert-type item is typically composed of a statement with which participants 
 
 ## Example: Single Occassion Survey
 
-This section outlines a workflow appropriate for when you have cross-sectional single occasion survey data. Examples for other designs are presented in the Cookbook chapter. The data corresponds to a design where the researcher has measured, age, sex, eye color, self-esteem, and job satisfaction. Two of these, self-esteem and job satisfaction, were measured with multi-item scales with reverse-keyed items. 
+This section outlines a workflow appropriate for when you have cross-sectional single occasion survey data. Examples for other designs are presented in the [Cookbook](https://dstanley4.github.io/psyc6060bookdown/cookbook.html) chapter. The data corresponds to a design where the researcher has measured, age, sex, eye color, self-esteem, and job satisfaction. Two of these, self-esteem and job satisfaction, were measured with multi-item scales with reverse-keyed items. 
 
 To Begin:
 
